--- a/audio-toolkit-shell/src-tauri/Cargo.toml
+++ b/audio-toolkit-shell/src-tauri/Cargo.toml
@@ -10,28 +10,20 @@ rust-version = "1.77.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-name = "audio_toolkit_shell_lib"
-crate-type = ["staticlib", "cdylib", "rlib"]
 
-[build-dependencies]
-tauri-build = { version = "2.3.1", features = ["codegen"] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.7.0", features = [] }
-tauri-plugin-log = "2"
-tauri-plugin-shell = "2"
 tokio = { version = "1.0", features = ["full"] }
-reqwest = { version = "0.12", features = ["json"] }
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 thiserror = "1.0"
-tauri-plugin-pty = "0.1.0"
 
-[dev-dependencies]
-tauri = { version = "2.7.0", features = ["test"] }
+eframe = "0.27.2"
+egui = "0.27.2"
+portable-pty = "0.9.0"
+toml = "0.8"
 tempfile = "3.8"
