--- a/audio-toolkit-shell/src-tauri/config.toml
+++ b/audio-toolkit-shell/src-tauri/config.toml
@@ -13,14 +13,14 @@ window_height = 720                   # Initial window height in pixels
 [[tabs]]
 title = "Start Scripts"                                                    # Tab display name
 command = "/Users/caioraphael/Desktop/BOUNCET4/PYTHON_SCRIPTS/start_scripts_rust"  # Executable to run
-auto_restart_on_success = false                                            # Auto-restart when success patterns detected
+auto_restart_on_success = false                                            # Auto-restart disabled for testing
 success_patterns = ["Completed successfully", "SCRIPT MENU"]               # Text patterns that trigger restart
 
 [[tabs]]
-title = "Terminal 2"                   # Standard bash terminal
-command = "bash"                       # Run bash shell
-auto_restart_on_success = false        # No auto-restart for interactive shell
-success_patterns = []                   # No success patterns for bash
+title = "Session Monitor"                # Session Monitor terminal
+command = "/Users/caioraphael/PYTHON/FULL_APP/launchers/audio-analyzer/start_scripts/SESSSION_MONITOR_PT_SESSIONS/session-monitor"  # Session monitor executable
+auto_restart_on_success = false         # Auto-restart when session monitoring completes
+success_patterns = ["Monitoring complete", "Session ended", "Ready for next session"]  # Session monitor completion patterns
 
 # Example additional tabs (uncomment and modify as needed):
 #
