--- a/audio-toolkit-shell/src-tauri/Cargo.toml
+++ b/audio-toolkit-shell/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ rust-version = "1.77.2"
 serde = { version = "1.0", features = ["derive"] }
 eframe = "0.27.2"
 egui = "0.27.2"
+egui_extras = "0.27.2"
 portable-pty = "0.9.0"
 toml = "0.8"
 unicode-width = "0.1"
